# QROOTF

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
inc/: qrootf.h  version.h
src/: main.c  qrootf.c  qrootf.rc
tests/: CMakeLists.txt  test_complex_ops.c  test_version.c
